see which users are connected

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -5,6 +5,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+    <main>
+        <form action="/username" method="post">
+            <input type="text" name="username" id="username">
+            <button type="submit">enter game</button>
+        </form>
+    </main>
 </body>
 </html>
