--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
     <main>
-        <form action="/username" method="post">
+        <form action="/game" method="get">
             <input type="text" name="username" id="username">
             <button type="submit">enter game</button>
         </form>
