--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -4,8 +4,9 @@
     <%- include('../partials/head') %> 
     <title>Document</title>
 </head>
-<body>
+<body id="home">
     <main>
+        <h1>Movie Guesser</h1>
         <form action="/game" method="get">
             <input type="text" name="username" id="username">
             <button type="submit">enter game</button>
