gets random movie poster

--- a/src/views/pages/room.ejs
+++ b/src/views/pages/room.ejs
@@ -7,6 +7,11 @@
 <body>
     <main>
         <ul id="userList"></ul>
+
+        <button class="newMovie">New Movie</button>
+
+        <div id="moviePoster"></div>
+    
         <a href="/" id="leave">Leave room</a> 
     </main>
 </body>
