--- a/src/views/pages/room.ejs
+++ b/src/views/pages/room.ejs
@@ -26,6 +26,12 @@
                     <button id="sendMessage">Send</button>
                 </form>
             </section>
+        </article>
+        <article id="queue">
+            <section>
+                <h2>Joined users</h2>
+                <ul id="joined"></ul>
+            </section>
         </article> 
     </main>
 </body>
