--- a/public/css/index.css
+++ b/public/css/index.css
@@ -61,6 +61,7 @@ ul {
     height: 100vh;
     padding: 0;
     display: flex;
+    position: relative;
 }
 
 h2 {
@@ -227,4 +228,40 @@ img {
     background-color: #387EF7;
     border-radius: .5em .5em 0 .5em;
     color: white;
+}
+
+#queue {
+    width: 100%;
+    height: 100%;
+    padding: 1em 0;
+    position: absolute;
+}
+
+#queue section {
+    background-color: rgb(31, 31, 31);
+    height: 100%;
+    width: 100%;
+    border-radius: .5em;
+    box-shadow: 0px 0px 5px black;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#queue section ul {
+    width: 50%;
+    height: 50%;
+    margin-top: 1em;
+}
+
+#queue section ul li {
+    background-color: rgb(172, 172, 172);
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    margin-bottom: .5em;
+    padding: 1em;
+    border-radius: .5em;
+    font-weight: bold;
 }
