--- a/src/views/pages/room.ejs
+++ b/src/views/pages/room.ejs
@@ -9,7 +9,6 @@
         <article>
             <section>
                 <a href="/" id="leave">Leave game</a>
-                <button class="newMovie">New Movie</button>
                 <div id="moviePoster"></div>
             </section>
         </article>
@@ -31,6 +30,7 @@
             <section>
                 <h2>Joined users</h2>
                 <ul id="joined"></ul>
+                <h3 id="userNeed"></h3>
             </section>
         </article> 
     </main>
