--- a/src/views/pages/room.ejs
+++ b/src/views/pages/room.ejs
@@ -9,6 +9,7 @@
         <article>
             <section>
                 <a href="/" id="leave">Leave game</a>
+                <div id="timer"></div>
                 <div id="moviePoster"></div>
             </section>
         </article>
