--- a/src/views/pages/room.ejs
+++ b/src/views/pages/room.ejs
@@ -8,14 +8,14 @@
     <main id="room">
         <article>
             <section>
-                <a href="/" id="leave">Leave game</a>
+                <a href="/" id="leave"><img src="/assets/exit.svg" alt="exit button"></a>
                 <div id="timer"></div>
                 <div id="moviePoster"></div>
             </section>
         </article>
         <article>
             <section>
-                <h2>Leaderboard</h2>
+                <h2>First to reach 100 wins!</h2>
                 <ul id="userList"></ul>
             </section>
             <section>
